--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-papaparse": "^3.11.1",
     "react-scripts": "4.0.1",
+    "victory": "^35.4.8",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
