--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-papaparse": "^3.11.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "victory": "^35.4.8",
     "web-vitals": "^0.2.4"
