--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -1,12 +1,18 @@
 name: run-all-tests
-on:
-  pull_request:
-    jobs:
-      all:
-        name: Run all
-        runs-on: ubuntu-latests
-        steps:
-          - uses: actions/checkout@v2
-          - uses: actions/setup-node@v1
-          - run: npm install
-          - run: npm test
+on: [pull_request]
+
+jobs:
+  install_and_run_all:
+    name: Install and run all tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup node
+        uses: actions/setup-node@v1
+
+      - name: Run Tests
+        run: npm install
+        run: npm test
