--- a/.github/workflows/run-all-tests.yml
+++ b/.github/workflows/run-all-tests.yml
@@ -13,6 +13,8 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v1
 
-      - name: Run Tests
+      - name: Install
         run: npm install
+
+      - name: Test
         run: npm test
