--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "prettier": {
     "singleQuote": true,
     "semi": false,
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "printWidth": 85
   },
   "husky": {
     "hooks": {
